--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,8 @@
-version: '3'
-
-services:
-    jekyll:
-        build:
-          context: . 
-        image: beautiful-jekyll-docker
-        command: jekyll serve --watch --incremental
-        ports:
-          - 80:4000
-          - 4000:4000
-        volumes:
-          - .:/srv/jekyll
+FROM jekyll/jekyll
+RUN gem install bundler
+WORKDIR /srv/jekyll
+COPY Gemfile .
+RUN bundle install
+EXPOSE 4000
+CMD [ "/usr/gem/bin/bundle", "exec", "/usr/local/bundle/bin/jekyll", "serve", "--port", "4000", "--host", "0.0.0.0" ]
+STOPSIGNAL 2
